black background, game show page video playing inside tv background image, screen shots styled into crt tv shapes

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,13 @@
       @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
     </style>
 
+
     <title>React App</title>
   </head>
   <body>
+    
+    <body style="background-color: black">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
