--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,13 @@
   <script>
     // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/yqdan9hq'
     (function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', w.intercomSettings); } else { var d = document; var i = function () { i.c(arguments); }; i.q = []; i.c = function (args) { i.q.push(args); }; w.Intercom = i; var l = function () { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/yqdan9hq'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })();
+
+    window.intercomSettings = {
+      app_id: 'yqdan9hq',
+      alignment: 'right',
+      horizontal_padding: 20,
+      vertical_padding: 20,
+    };
   </script>
 
   <title>React App</title>
