add custom launcher to Intercom settings

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       alignment: 'right',
       horizontal_padding: 20,
       vertical_padding: 20,
+      custom_launcher_selector: '#launcher'
     };
   </script>
 
